# VibeMind-VoiceDialog

./: .env  .env.example  .env.sanitized  .env.template  .gitattributes  .gitignore  .gitmodules  0.4.0  =1.71.0  =4.12.0  AGENT_SETUP_SIMPLIFIED.md  AGENT_TOOL_CONFIG.md  AUTOGEN_GRPC_SETUP.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPLETE_SYSTEM_GUIDE.md  CONTRIBUTING.md  CROSS_PLATFORM_PREPARATION.md  CROSS_PLATFORM_STATUS.md  DASHBOARD_PASTE_CONFIGS.md  Dockerfile  ENHANCED_AGENT_PROMPTS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COORDINATION.md  IPC_MECHANISM_CORRECTION.md  LICENSE  LLM_SCAN.md  MIGRATION_TEST_RESULTS.md  MOIRE_INTEGRATION_SUMMARY.md  MULTI_AGENT_SETUP.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_FINAL_REPORT.md  PHASE7_SUMMARY.md  PHASE8_SUMMARY.md  PHASE9_SUMMARY.md  PRODUCTION.md  PRODUCTION_CHANGES.md  (+29 more)
.claude/: .mcp  settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
configs/: README.md
docs/: 01_systembeschreibung.md  02_kernarchitektur.md  03_spaces.md  04_swarm_layer.md  05_technologiestack.md  06_git_repositories.md  07_aktueller_status.md  08_entwicklungsphilosophie.md  AGENT_SETUP.md  CLIENT_TOOLS_QUICKSTART.md  COMPLETE_SYSTEM_GUIDE.md  DESKTOP_AUTOMATION_ARCHITECTURE.md  DROPE_INTEGRATION.md  LLM_INVENTORY.md  README.md  SERVICES.md  TECHNOLOGY_INVENTORY.md  configuration.md  glossary.md  readme_agentfarm.md  readme_coding.md  readme_context.md  readme_doc.md  (+13 more)
python/spaces/desktop/Automation_ui/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.ocr  Dockerfile.remote-desktop  README.md  __init__.py  pyproject.toml  pytest.ini  requirements-docker.txt  requirements-ocr.txt  requirements.txt  server.py  start_tests.bat  test_clawhub.py
python/spaces/desktop/Automation_ui/backend/app/: __init__.py  config.py  database.py  exceptions.py  logger_config.py  main.py
python/spaces/desktop/Automation_ui/backend/app/core/: __init__.py  config.py  logging.py  websocket_manager.py
python/spaces/desktop/Automation_ui/backend/app/models/: __init__.py  db_models.py  skill.py  snapshot_models.py  workflow.py
python/spaces/desktop/Automation_ui/backend/app/routers/: __init__.py  api_v1.py  automation.py  clawdbot.py  clawhub.py  client_manager.py  configs.py  desktop.py  eyeterm.py  health.py  llm_intent.py  mcp_bridge.py  node_configs.py  ocr.py  shell.py  snapshots.py  websocket.py  workflows.py
python/spaces/desktop/Automation_ui/backend/app/schemas/: __init__.py  node_schemas.py
python/spaces/desktop/Automation_ui/backend/app/services/: __init__.py  action_router.py  clawdbot_bridge.py  clawhub_client.py  click_automation_service.py  client_manager_service.py  client_registry.py  command_queue.py  contact_registry.py  desktop_automation_service.py  desktop_service.py  graph_execution_service.py  manager.py  node_service.py  ocr_service.py  redis_pubsub.py  shell_service.py  skill_manager.py  tool_safety.py  ui_memory.py  video_agent.py
python/spaces/desktop/Automation_ui/backend/app/websocket/: __init__.py  handlers.py  manager.py
python/spaces/desktop/Automation_ui/backend/migrations/: init.sql
python/spaces/desktop/Automation_ui/backend/moire_agents/: main_society.py  mcp_demo.py  mcp_server_git.py  mcp_server_handoff.py  stream_frame_cache.py
python/spaces/desktop/Automation_ui/backend/moire_agents/agents/: classification_agent.py  orchestrator.py  society_orchestrator.py  vision_agent.py
python/spaces/desktop/Automation_ui/backend/moire_agents/agents/subagents/: background_subagent.py  planning_subagent.py  vision_subagent.py
python/spaces/desktop/Automation_ui/backend/moire_agents/core/: openrouter_client.py  task_decomposer.py
python/spaces/desktop/Automation_ui/backend/moire_agents/tests/: test_capture_ocr.py  test_ws_connection.py
python/spaces/desktop/Automation_ui/backend/moire_agents/voice/: __init__.py  api_router.py  command_executor.py  intent_parser.py  main.py  requirements.txt  serve_vapi.py  speech_to_text.py  text_to_speech.py  vapi_web.html
python/spaces/desktop/Automation_ui/backend/moire_agents/worker_bridge/: host.py
python/spaces/desktop/Automation_ui/backend/moire_agents/worker_bridge/workers/: classification_worker.py  execution_worker.py  planner_worker.py
python/spaces/desktop/Automation_ui/backend/scripts/: README.md  docker-healthcheck.sh  docker-startup.sh  ssh-auto-connect.sh  ssh-healthcheck.sh  validate_new_architecture.py  validate_node_execution.py
(+1535 files in other folders)
